corrigindo bug de overflow no body

--- a/index.css
+++ b/index.css
@@ -22,6 +22,7 @@ a:focus {
 body {
     width: 100vw;
     background-color: var(--lightGrey);
+    overflow-x: hidden;
 }
 
 .top-bar {
@@ -219,7 +220,7 @@ body {
     border-radius: 28px;
 }
 
-ion-icon {
+.stories-arrow-ico {
     width: 26px;
     height: 26px;
     position: absolute;
@@ -585,9 +586,6 @@ ion-icon {
 }
 
 @media screen and (max-width: 565px) {
-    body {
-        overflow-x: hidden;
-    }
 
     .search {
         display: none;
@@ -600,7 +598,8 @@ ion-icon {
         padding: 10px;
         position: fixed;
         bottom: 0;
-        width: 100vw;
+        left: 0;
+        width: 100%;
         height: 54px;
         background-color: #fff;
     }
@@ -608,16 +607,12 @@ ion-icon {
     .footer a {
         width: 20px;
         height: 20px;
-        position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
     .bottom-ico {
-        position: absolute !important;
-        left: 0;
-        bottom: 0;
         color: black !important;
         background-color: #fff !important;
         width: inherit !important;
